<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab04</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bem_vindo">Bem vindo ao Android</string>
    <string name="dsv_por">Desenvolvido por mim :D</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="edt_dica_acesso">Usuário</string>    
    <string name="edt_dica_senha">Senha</string>

</resources>
