<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="146dp"
            android:layout_height="146dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher" />

        <EditText
            android:id="@+id/acessoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_dica_acesso"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/senhaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_dica_senha"
            android:ems="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/acessoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_ok" />

            <Button
                android:id="@+id/limparButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancelar" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/dsv_por" />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:text="" />

</RelativeLayout>